...
                    android:paddingRight="@dimen/application_margin_small"
                    android:paddingBottom="@dimen/application_margin_small"
                    android:text="@{PlaceViewModel.place.url}"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/placeBlockActivityCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/application_margin_small"
                    android:checked="@{PlaceViewModel.place.blocked}"
                    android:text="@string/place_block_activity_checkbox" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/placeReturnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_return_button"
            android:padding="@dimen/application_margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
...
