...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="4dp">

            <Switch
                android:id="@+id/switch_block_visited_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/block"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_view_visited_place"
...
